// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests ERC20 tokens #initialize initialize pool with no hooks and no protocol fee 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 54189,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 157812,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 217555,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 157812,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 209520,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 319136,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 209520,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 158530,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 286180,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 158530,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 192120,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 186232,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 211064,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 253104,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 204096,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 192120,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 186320,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 205292,
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 247307,
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 150808,
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 210550,
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 150808,
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 202513,
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 312129,
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 202513,
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 163944,
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 291593,
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 163944,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 179476,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 173587,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 198419,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 240460,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 191451,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 179476,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 173676,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 192647,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 234662,
}
`;
